objects/deamonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: php-redis
        image: nginx:1.17.3
