objects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-nginx
  labels:
    app: deployment-label
spec:
  # modify replicas according to your case
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginxbackend
        image: nginx:latest
